# dux

./: .gitignore  AGENTS.md  CODE_REVIEW.md  Cargo.toml  LICENSE  PERFORMANCE_CHANGES.md  README.md  VERIFICATION_AUDIT.md  abc.md
docs/: SECURITY.md  architecture-analysis-and-roadmap.md  full-code-audit.md
docs/superpowers/plans/: 2026-06-25-audit-fixes-v4.md
docs/superpowers/specs/: 2026-06-22-xdu-design.md
packaging/: dux.service  dux.spec
packaging/deb/: control  postinst  postrm  prerm
scripts/: build-release.sh  dux-verify.sh
src/: containers.rs  deleted.rs  emit.rs  guard.rs  main.rs  query.rs  scan.rs  store.rs  tui.rs  util.rs  watch.rs
