[package]
name = "dux"
version = "0.2.2"
edition = "2021"
description = "Persistent realtime disk usage + file search. du/ncdu/locate/find, but indexed and live."
license = "MIT"

[[bin]]
name = "dux"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
nix = { version = "0.29", features = ["fs", "dir", "user"] }
libc = "0.2"
rayon = "1"
jwalk = "0.8"
crossbeam-channel = "0.5"
ratatui = "0.28"
crossterm = "0.28"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
humansize = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
